# ventsim

./: CMakeLists.txt  README.md
lung/: lung.cpp  lung.h
src/: Command.txt  lung.cpp  lung.h  main  minimal.cpp  psv.cpp  respiratory_sim.cpp  wip.txt
test/: natural_respiration.cpp
test/Natural-respiration-example/: natural_respiration.cpp  natural_respiration_command.txt
test/Volume-control-example/: vcv.cpp  vcv_command.txt
test/natural_respiration/: test_natural_respiration.cpp
test/volume_control/: test_vcv.cpp
